re PR tree-optimization/37416 (Failure to return number of  loop iterations)

PR tree-optimization/37416
	* tree-scalar-evolution.c (follow_ssa_edge_in_rhs): Handle NOP_EXPR.

From-SVN: r142616